--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
+
+
 <body>
     <div class="row">
         <nav class="navbar navbar-light bg-light fixed-top">
@@ -40,30 +42,30 @@
     </div>
 
 
-    <div class="border-bottom">
-        <div class="d4 row ">
+    <div class="container">
+        <div class="row ">
             <div class="col-md-6">
                 <img src="https://images.unsplash.com/photo-1587502537104-aac10f5fb6f7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxzZWFyY2h8MzZ8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60">
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center ml-5">
                 <h1 class="fw-bolder" style="margin-top: 220px ;">Welcome To Our Website</h1>
                 <p style=" font-size: 30px; font-weight: lighter; margin-top: 20px;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                     <br><br> A small river named Duden flows by their place and supplies it with the necessary regelialia.
                 </p>
-                <video width="200px" height="40px" controls></video>
             </div>
         </div>
     </div>
 
 
-    <div class="text-center">
-        <div style="margin-top: 200px;">
+
+    <div>
+        <div class="text-center" style="margin-top: 200px;">
             <p class="fw-bolder" style="font-size: 50px;">Experience Once In Your Life Time</p>
             <p class="fw-lighter" style="font-size: 30px;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,<br> there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the <br> Semantics, a large language ocean.</p>
         </div>
 
-        <div class="row mt-5" style="margin-left: 130px; ">
-            <div class="card col-md-3 border-0 align-items-lg-center" style="width: 24rem;">
+        <div class="row mt-5 text-center" style="margin-left: 130px; ">
+            <div class="card col-md-4 border-0 align-items-lg-center" style="width: 24rem;">
                 <img class="w-25 " src="https://cdn-icons.flaticon.com/png/128/562/premium/562678.png?token=exp=1642654605~hmac=ccef594194b9b3652f6ed709080c4726" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Good Foods</p>
@@ -71,14 +73,14 @@
                 </div>
             </div>
 
-            <div class="card col-md-3 border-0 align-items-lg-center" style="width: 24rem;">
+            <div class="card col-md-4 border-0 align-items-lg-center" style="width: 24rem;">
                 <img class="w-25 " src="https://cdn-icons.flaticon.com/png/128/4284/premium/4284034.png?token=exp=1642655790~hmac=8b1c263bce55748af661ca4f02d5a7a2" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Travel Anywhere</p>
                     <p>Far far away, behind the word mountains, far<br> from the countries Vokalia and Consonantia,<br> there live the blind texts.</p>
                 </div>
             </div>
-            <div class="card col-md-3 border-0 align-items-lg-center" style="width: 24rem;">
+            <div class="card col-md-4 border-0 align-items-lg-center" style="width: 24rem;">
                 <img class="w-25 " src="https://cdn-icons.flaticon.com/png/128/870/premium/870092.png?token=exp=1642655790~hmac=e6b2247d03972e25d1e818d9faac7d8d" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Airplane</p>
@@ -88,7 +90,7 @@
         </div>
 
         <div class="row mt-5" style="margin-left: 130px;">
-            <div class="card col-md-3 border-0 align-items-lg-center" style="width: 24rem;">
+            <div class="card col-md-4 border-0 align-items-lg-center" style="width: 24rem;">
                 <img class="w-25 " src="https://cdn-icons.flaticon.com/png/128/3038/premium/3038990.png?token=exp=1642655790~hmac=02d44d0ec195059874cc4fb81d7bc199" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Beach Resort</p>
@@ -96,14 +98,14 @@
                 </div>
             </div>
 
-            <div class="card col-md-3 border-0 align-items-lg-center" style="width: 24rem;">
+            <div class="card col-md-4 border-0 align-items-lg-center" style="width: 24rem;">
                 <img class="w-25 " src="https://cdn-icons-png.flaticon.com/128/1706/1706709.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Mountain Climbing</p>
                     <p>Far far away, behind the word mountains, far<br> from the countries Vokalia and Consonantia,<br> there live the blind texts.</p>
                 </div>
             </div>
-            <div class="card col-md-3 border-0 align-items-lg-center" style="width: 24rem;">
+            <div class="card col-md-4 border-0 align-items-lg-center" style="width: 24rem;">
                 <img class="w-25 " src="https://cdn-icons.flaticon.com/png/128/2615/premium/2615285.png?token=exp=1642656053~hmac=ec54be83408b023644369bf4e2e2a552" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Hot Air Baloon</p>
@@ -271,7 +273,7 @@
                     <span class="fa fa-star"></span>
                 </div>
             </div>
-            <div class="card col-md-3 border-0" style="width: 18rem;">
+            <div class="card col-sm-3 border-0" style="width: 18rem;">
                 <img src="https://media.istockphoto.com/photos/silhouettes-of-hikers-at-sunset-picture-id483629308?b=1&k=20&m=483629308&s=170667a&w=0&h=a75q9HlSBlLxPCJQbYhKszwqpREpyIoLGfkWasoean0=" class="card-img-top" alt="...">
                 <div class="card-body">
                     <p class="card-text fw-bolder" style="font-size:30px;">Climbing</p>
@@ -322,13 +324,6 @@
         <p>Copyright &copy; Photography 2020</p>
         <p>Made with &hearts; by Durga</p>
     </footer>
-
-
-
-
-
-
-
 
 
     <!-- <script src="index.js"></script> -->
